# nauticle

./: .gitignore  CMakeLists.txt  README.md  uninstall.sh
Examples/0_8_shaped_choreography/: config.xml
Examples/1_Heat_eq_2d/: 0000.vtk  0001.vtk  0002.vtk  0003.vtk  0004.vtk  0005.vtk  0006.vtk  0007.vtk  0008.vtk  0009.vtk  step_0000.vtk  step_0001.vtk  step_0002.vtk  step_0003.vtk  step_0004.vtk  step_0005.vtk  step_0006.vtk  step_0007.vtk  step_0008.vtk  step_0009.vtk  step_0010.vtk  step_0011.vtk  step_0012.vtk  step_0013.vtk  step_0014.vtk
Examples/2_Wave_eq_2d/: config.xml  proba.pvsm
Examples/3_CahnHilliard_2d/: compressed.avi  config.xml  video.avi.REMOVED.git-id
Examples/4_DEM/: config.xml
Examples/5_SPH_dam/: config.xml  start.sh
Examples/6_SPH_lid_driven_cavity/: config.xml  ic.vtk  step_0000.vtk  step_0001.vtk
Examples/8_shaped_choreography/: eightshaped.vtk  three_body_problem.avi
Examples/DEM/: gifenc.sh
Examples/Heat_eq_2d/: config.xml
Examples/SPH_solid/: config.xml
Examples/SandorBalazs/: case_gen.m  config.xml  initial_condition.vtk  proba.m
Examples/cavity_flow/: config.xml  step_0000.vtk  step_0001.vtk  step_0002.vtk  step_0003.vtk  step_0004.vtk  step_0005.vtk  step_0006.vtk  step_0007.vtk  step_0008.vtk  step_0009.vtk  step_0010.vtk  step_0011.vtk  step_0012.vtk  step_0013.vtk  step_0014.vtk  step_0015.vtk  step_0016.vtk  step_0017.vtk  step_0018.vtk  step_0019.vtk  step_0020.vtk  step_0021.vtk  step_0022.vtk  step_0023.vtk  step_0024.vtk  step_0025.vtk  step_0026.vtk  step_0027.vtk  step_0028.vtk  step_0029.vtk  step_0030.vtk  step_0031.vtk  step_0032.vtk  step_0033.vtk  step_0034.vtk  step_0035.vtk  step_0036.vtk  step_0037.vtk  step_0038.vtk  (+216 more)
Examples/tessellation/: config.xml  tessellation.avi.REMOVED.git-id
docs/Doxygen/: Doxyfile
docs/Doxygen/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _color__define_8h.html  _color__define_8h_source.html  _color__undefine_8h.html  _color__undefine_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  classbool.html  classes.html  classhdy_x_m_l__parser.html  classhdy_x_m_l__parser__inherit__graph.map  classhdy_x_m_l__parser__inherit__graph.md5  classpm_a_a_b_b-members.html  classpm_a_a_b_b.html  classpm_arithmetic__function-members.html  classpm_arithmetic__function.html  classpm_arithmetic__function__coll__graph.map  classpm_arithmetic__function__coll__graph.md5  classpm_arithmetic__function__inherit__graph.map  classpm_arithmetic__function__inherit__graph.md5  classpm_arithmetic__operator-members.html  classpm_arithmetic__operator.html  classpm_arithmetic__operator__coll__graph.map  classpm_arithmetic__operator__coll__graph.md5  classpm_arithmetic__operator__inherit__graph.map  classpm_arithmetic__operator__inherit__graph.md5  classpm_case-members.html  classpm_case.html  classpm_command__parser-members.html  classpm_command__parser.html  classpm_complex-members.html  classpm_complex.html  classpm_constant-members.html  classpm_constant.html  classpm_constant__coll__graph.map  classpm_constant__coll__graph.md5  classpm_constant__inherit__graph.map  classpm_constant__inherit__graph.md5  classpm_dem-members.html  (+712 more)
include/: Color_define.h  Color_undefine  Color_undefine.h  nauticle_constants.h  pm.h  pmArithmetic_function.h  pmArithmetic_operator.h  pmCase.h  pmCase_manager.h  pmCommand_parser.h  pmComplex.h  pmConstant.h  pmDem.h  pmDem_operator.h  pmDomain.h  pmDvm_operator.h  pmEquation.h  pmEquation_parser.h  pmExpression.h  pmExpression_parser.h  pmFem_interface.h  pmField.h  pmFile.h  pmFile_parser.h  pmFilter.h  pmFmax.h  pmFmean.h  pmFmin.h  pmFsearch.h  pmFsum.h  pmFunction.h  pmFunction_parser.h  pmFunction_space.h  pmGrid.h  pmGrid_space.h  pmInteraction.h  pmKernel.h  pmLog_stream.h  pmMath_parser.h  pmMath_test.h  (+31 more)
src/: main.cpp  pmCase.cpp  pmCase_manager.cpp  pmCommand_parser.cpp  pmComplex.cpp  pmConstant.cpp  pmDem.cpp  pmDomain.cpp  pmDvm_operator.cpp  pmEquation.cpp  pmEquation_parser.cpp  pmExpression.cpp  pmExpression_parser.cpp  pmField.cpp  pmFile.cpp  pmFmax.cpp  pmFmean.cpp  pmFmin.cpp  pmFsearch.cpp  pmFsum.cpp  pmFunction.cpp  pmFunction_parser.cpp  pmFunction_space.cpp  pmGrid.cpp  pmGrid_space.cpp  pmKernel.cpp  pmLog_stream.cpp  pmMath_parser.cpp  pmMath_test.cpp  pmNbody.cpp  pmNeighbors.cpp  pmNeighbours.cpp  pmParameter_space.cpp  pmParticle_system.cpp  pmRandom.cpp  pmSfm_operator.cpp  pmSingle.cpp  pmSocial_force_model.cpp  pmSolver.cpp  pmSymbol.cpp  (+11 more)
src/binary_case/header/: pmCells.h  pmQueue.h
src/expression_tree/header/: pmExpression.h  pmTensor.h
src/expression_tree/source/: pmExpression.cpp
src/file_operations/header/: pmData_reader.h  pmLog_stream.h  pmVTK_manager.h  pmVTK_reader.h  pmVTK_writer.h  pmXML_processor.h  pmYAML_processor.h
src/file_operations/source/: pmData_reader.cpp  pmLog_stream.cpp  pmVTK_manager.cpp  pmVTK_reader.cpp  pmVTK_writer.cpp  pmXML_processor.cpp  pmYAML_processor.cpp
src/management/header/: Color_define.h  Color_undefine.h  nauticle.h  nauticle_constants.h  pmCounter.h  pmID_manager.h  pmIdentifier.h  pmNoncopyable.h  pmVersion.h
src/management/source/: pmID_manager.cpp
src/numeric/header/: pmCell_iterator.h  pmHelper_functions.h  pmHistory.h  pmHysteron.h  pmKernel.h  pmParticle.h  pmQuaternion.h  pmQueue.h  pmRandom.h  pmSmallest.h  pmSort.h
src/numeric/source/: pmCell_iterator.cpp  pmHysteron.cpp  pmKernel.cpp  pmParticle.cpp  pmRandom.cpp  pmSmallest.cpp
src/parsers/header/: pmCommand_parser.h  pmEquation_parser.h  pmExpression_parser.h  pmMath_parser.h  pmMath_test.h  pmTensor_parser.h
src/parsers/source/: pmCommand_parser.cpp  pmEquation_parser.cpp  pmExpression_parser.cpp  pmMath_parser.cpp  pmMath_test.cpp  pmTensor_parser.cpp
src/particle_generator/header/: pmGrid.h  pmGrid_space.h  pmSurface.h
src/particle_generator/source/: pmGrid.cpp  pmGrid_space.cpp  pmSurface.cpp
src/precompilation/: sample.h
src/precompilation/header/: pmInterface.h  pmRuntime_compiler.h  sample.h
src/precompilation/source/: pmRuntime_compiler.cpp
(+230 files in other folders)
